# visual_effects

./: CMakeLists.txt  README.txt  blur_hor.frag  blur_ver.frag  blur_ver.vert  common.cpp  common.hpp  composite.frag  fxaa.cpp  fxaa.frag  fxaa.vert  h.hpp  o.cpp  scene.frag  scene.vert  ssao.cpp  ssao.frag
